Removed undesired icons from sidebar

--- a/cvat-ui/src/components/annotation-page/standard-workspace/styles.scss
+++ b/cvat-ui/src/components/annotation-page/standard-workspace/styles.scss
@@ -331,3 +331,7 @@
     justify-content: center;
     margin-top: $grid-unit-size * 2;
 }
+
+.cvat-ai-control {
+    @extend .cvat-draw-mask-control;
+}
